# workouts

./: .env.example  .gitignore  AGENTS.md  README.md  justfile
apps/api/: .ruff.toml  Dockerfile  README.md  mypy.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1b219e79bbcf_init_schema.py  9d5f7d4cf24a_add_last_saved_at_to_workout_sessions.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: admin_users.py  auth.py  cardio_sessions.py  exercises.py  exports.py  health.py  scheduled_workouts.py  sessions.py  stats.py  templates.py
apps/api/app/core/: config.py  db.py  errors.py  permissions.py  rbac.py  security.py
apps/api/app/models/: __init__.py  assignment.py  audit.py  cardio.py  exercise.py  schedule.py  session.py  template.py  token.py  user.py
apps/api/app/repositories/: __init__.py  cardio_repo.py  schedule_repo.py  session_repo.py  template_repo.py
apps/api/app/schemas/: admin_user.py  cardio.py  exercise.py  schedule.py  session.py  stats.py  template.py
apps/api/app/scripts/: seed_dev.py
apps/api/app/services/: __init__.py  admin_user_service.py  calendar_service.py  cardio_service.py  export_service.py  schedule_service.py  session_commands.py  session_queries.py  session_serializers.py  session_service.py  stats_service.py  template_service.py
apps/api/app/tests/: conftest.py
apps/api/app/tests/integration/: test_admin_users.py  test_auth.py  test_calendar_history_exports.py  test_cardio_and_stats.py  test_e2e_core_workflow.py  test_exercises.py  test_health.py  (+4 more)
apps/api/data/: app.db
(+64 files in other folders)
